change font size of the result to avoid vertical scrollbar

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -112,7 +112,7 @@ main{
 }
 
 .result-cont{
-    font-size: 4rem;
+    font-size: 3rem;
     color: white;
     margin-right: auto;
 }
